stop tracking auto gen plugins

--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,7 @@ app.*.map.json
 /android/app/google-services.json
 
 # Auto gen plugins
-/linux/flutter/generated_plugin_registrant.cc
-/linux/flutter/generated_plugins.cmake
-/macos/Flutter/GeneratedPluginRegistrant.swift
-/windows/flutter/generated_plugin_registrant.cc
-windows/flutter/generated_plugins.cmake
+**/generated_plugin_registrant.cc
+**/generated_plugin_registrant.h
+**/generated_plugins.cmake
+**/GeneratedPluginRegistrant.swift
